--- a/root/app/styles/portrait.css
+++ b/root/app/styles/portrait.css
@@ -1140,48 +1140,15 @@ ul.no-list-style {
 
 
 /*SLIDE IN IMAGE*/
-@-webkit-keyframes slide {
-    /*100% { left: 0; }*/
-        0%{background-position-x:-200vh}
-    100%{background-position-x:0vh}
-}
-
-@keyframes slide {
-    /*100% { left: 0; }*/
-    0%{background-position-x:-200vh}
-    100%{background-position-x:0vh}
-}
-@-webkit-keyframes zoom {
-    /*100% { left: 0; }*/
-        0%{zoom:1%}
-    100%{zoom:100%}
-}
-
-@keyframes zoom {
-    /*100% { left: 0; }*/
-       0%{zoom:1%}
-    100%{zoom:100%}
-}
-
 .portrait-img{
+    background-position-x:0vh;
     background-image: url('/images/bg.png');
 
     background-repeat: no-repeat;
     background-size: cover;
     overflow:hidden;
 
-     -webkit-animation: slide 1s forwards;
-    -webkit-animation-delay: 0s;
-    animation: slide 1s forwards;
-    animation-delay: 0s;
 }
 
-.portrait-content{
-      -webkit-animation: zoom 1s forwards;
-    -webkit-animation-delay: 0s;
-    animation: zoom 1s forwards;
-    animation-delay: 0s;
-
-}
 /*SLIDE IN IMAGE*/
 
