--- a/root/app/templates/portrait-animation.html
+++ b/root/app/templates/portrait-animation.html
@@ -1,8 +1,8 @@
-<div class="col-md-5 portrait-img">
+<div class="col-md-5 portrait-img-animation">
 
    
 
-        <div class="" style="position:fixed;bottom:10px;text-align-last: center;text-align: center;width: inherit;">
+        <div class="portrait-content" style="position:fixed;bottom:10px;text-align-last: center;text-align: center;width: inherit;">
 
             <h1 class="block__title" style="text-shadow: 2px 2px 4px #000000;">
                 <span style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">Hey, I'm Sivaraj,</span>
