--- a/root/index.ejs
+++ b/root/index.ejs
@@ -43,7 +43,7 @@
   <link rel="stylesheet" href="css/spinner.css">
   <link rel="stylesheet" href="css/app.css">
 
-  <link rel="stylesheet" href="app/styles/portrait.css">
+  <link rel="stylesheet" href="app/styles/portrait-animation.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
@@ -67,7 +67,7 @@
     <div class="container fluid" style="overflow:'hidden';">
       <div class="row">
 
-         <% include app/templates/portrait.html %>
+         <% include app/templates/portrait-animation.html %>
 
         <div class="col-md-7" style="overflow-y: scroll;height: 100vh;">
           <div class="vertical-center">
