--- a/root/app/templates/home.html
+++ b/root/app/templates/home.html
@@ -1,6 +1,24 @@
 <h3>About me
 </h3>
 
-Hey what's up? Full name's Rafael but everyone calls me Raf. I'm a front-end developer born & raised in Belgium, but currently working in London at NEVERBLAND.
+<span style="font-size:18px">
+Hey what's up? Full name's Sivaraj but everyone calls me Siva.
+<br/>
+<br/>
+I'm a MEAN Stack developer born & raised in Salem, but currently working in Bengaluru, India.
+<br/>
+<br/>
+I'm also a innovative and technically sophisticated Software Engineer offering <b>4.6 years of experience</b> in the software development lifecycle from concept through delivery of applications and customizable solutions.
 
-Fluent in HTML5 CSS3 Sass Less and improving on my JavaScript jQuery every day. I know my way around WordPress and I've recently started experimenting with REST APIs using React.
+<br/>
+<br/>
+Fluent in <b>Node JS</b>, <b>Angular JS 1&2 (MEAN Stack)</b> developments as well as <b>Hybrid Mobile App</b> (based on <b>Cordova/Ionic</b> and <b>React-Native</b>) developemnts.
+
+<br/>
+<br/>
+Had hands on experience with Cloud Platforms like <b>Azure</b>, <b>AWS</b> along with DevOps(CI/CD) models.
+
+<br/>
+<br/>
+And improving on my <b>Javascript (ES6)</b>,<b> Java</b> and <b>Python</b> skills every day.I know my way around <b>Machine Learning</b> and I've recently started experimenting with scikit  using Python.
+</span>
