--- a/root/app/templates/home.html
+++ b/root/app/templates/home.html
@@ -1,24 +1,19 @@
-<h3>About me
+<h3 style="padding-bottom:0px;">About me
 </h3>
-
 <span style="font-size:18px">
-Hey what's up? Full name's Sivaraj but everyone calls me Siva.
+ <ul>
+        <li>Hey what's up? Full name's Sivaraj but everyone calls me Siva.</li>
+        <li>I'm a MEAN Stack developer born & raised in Salem, but currently working in Bengaluru, India.</li>
+        <li>I'm also a innovative and technically sophisticated Software Engineer offering <br/><b style="color:#BF360C">4.6 years of experience</b> in the software development lifecycle from concept through delivery of applications and customizable solutions.</li>
+        <li>Fluent in <b style="color:#03a9f4">Node JS</b>, <b style="color:#03a9f4">Angular JS 1&2 (MEAN Stack)</b> developments as well as <b style="color:#03a9f4">Hybrid Mobile App</b> (based on <b style="color:#03a9f4">Cordova/Ionic</b> and <b style="color:#03a9f4">React-Native</b>) developemnts.</li>
+        <li>Had hands on experience with Cloud Platforms like <b style="color:#03a9f4">Azure</b>, <b style="color:#03a9f4">AWS</b> along with DevOps(CI/CD) models.</li>
+        <li>And improving on my <b style="color:#03a9f4">Javascript (ES6)</b>,<b style="color:#03a9f4"> Java</b> and <b style="color:#03a9f4">Python</b> skills every day.I know my way around <b style="color:#03a9f4">Machine Learning</b> and I've recently started experimenting with scikit  using Python.</li>
+ </ul>
 <br/>
 <br/>
-I'm a MEAN Stack developer born & raised in Salem, but currently working in Bengaluru, India.
-<br/>
-<br/>
-I'm also a innovative and technically sophisticated Software Engineer offering <b>4.6 years of experience</b> in the software development lifecycle from concept through delivery of applications and customizable solutions.
-
-<br/>
-<br/>
-Fluent in <b>Node JS</b>, <b>Angular JS 1&2 (MEAN Stack)</b> developments as well as <b>Hybrid Mobile App</b> (based on <b>Cordova/Ionic</b> and <b>React-Native</b>) developemnts.
-
-<br/>
-<br/>
-Had hands on experience with Cloud Platforms like <b>Azure</b>, <b>AWS</b> along with DevOps(CI/CD) models.
-
-<br/>
-<br/>
-And improving on my <b>Javascript (ES6)</b>,<b> Java</b> and <b>Python</b> skills every day.I know my way around <b>Machine Learning</b> and I've recently started experimenting with scikit  using Python.
+<i class="fa fa-envelope" aria-hidden="true" style="padding:10px;color:#03A9F4;"><a style="    padding: 20px;" href="mailto:sivarajng@gmail.com">sivarajng@gmail.com</a></i>
 </span>
+
+
+
+
