--- a/root/app/templates/skills.html
+++ b/root/app/templates/skills.html
@@ -1,26 +1,45 @@
-<md-tab-group style="height:100vh">
-    <md-tab label="Tab 1" style="height:100vh">All
+<md-tab-group style="overflow:hidden">
+    <md-tab label="All" style="height:100%">
 
         <div class="container fluid" style="height:100vh">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="container">
-                        <md-card>Simple card</md-card>
-                        <md-card>Simple card</md-card>
+            <div class="row fluid">
+                <div class="col-md-4" style="padding:2px">
+                    <div class="container fluid">
+                        <md-card style="margin:2px;">Simple card</md-card>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="container" >
-                        <md-card>Simple card</md-card>
-                        <md-card>Simple card</md-card>
+               
+                <div class="col-md-4" style="padding:2px">
+                    <div class="container fluid">
+                        <md-card style="margin:2px;">Simple card</md-card>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="container">
-                        <md-card>Simple card</md-card>
-                        <md-card>Simple card</md-card>
+               
+                <div class="col-md-4" style="padding:2px">
+                    <div class="container fluid">
+                        <md-card style="margin:2px;">Simple card</md-card>
                     </div>
                 </div>
+               
+                <div class="col-md-4" style="padding:2px">
+                    <div class="container fluid">
+                        <md-card style="margin:2px;">Simple card</md-card>
+                    </div>
+                </div>
+               
+                <div class="col-md-4" style="padding:2px">
+                    <div class="container fluid">
+                        <md-card style="margin:2px;">Simple card</md-card>
+                    </div>
+                </div>
+               
+                <div class="col-md-4" style="padding:2px">
+                    <div class="container fluid">
+                        <md-card style="margin:2px;">Simple card</md-card>
+                    </div>
+                </div>
+               
+
             </div>
         </div>
 
