--- a/root/app/styles/portrait-animation.css
+++ b/root/app/styles/portrait-animation.css
@@ -1167,7 +1167,7 @@ ul.no-list-style {
 
 .portrait-img-animation{
     background-position-x:0vh;
-    background-image: url('/images/bg.png');
+    background-image: url('/images/sivaraj nagaraj.png');
 
     background-repeat: no-repeat;
     background-size: cover;
