--- a/root/app/styles/portrait.css
+++ b/root/app/styles/portrait.css
@@ -1142,7 +1142,7 @@ ul.no-list-style {
 /*SLIDE IN IMAGE*/
 .portrait-img{
     background-position-x:0vh;
-    background-image: url('/images/bg.png');
+    background-image: url('/images/sivaraj nagaraj.png');
 
     background-repeat: no-repeat;
     background-size: cover;
