--- a/root/app/templates/skills.html
+++ b/root/app/templates/skills.html
@@ -13,7 +13,7 @@
                         background-color: rgba(0, 0, 0, 0.1);
                             border-left-color: #3ee6bf;
                              border-left-style: solid;
-                             padding-left: 10px;
+                             padding: 5px;
     padding-top: 15px;
                              ">
 
