--- a/root/app/templates/skills.html
+++ b/root/app/templates/skills.html
@@ -14,13 +14,16 @@
                             border-left-color: #3ee6bf;
                              border-left-style: solid;
                              padding: 5px;
+
     padding-top: 15px;
+    padding-left: 15px;
+    padding-bottom: 0px;
                              ">
 
                              <md-card-header>
     <img md-card-avatar src="https://source.unsplash.com/random/200x200">
-    <md-card-title> <b>{{list.name}}</b></md-card-title>
-    <md-card-subtitle>{{list.tag}}</md-card-subtitle>
+    <md-card-title style="    height: 28px;word-wrap: break-word;"> <b>{{list.name}}</b></md-card-title>
+    <md-card-subtitle style="">{{list.tag}}</md-card-subtitle>
   </md-card-header>
 
                             <!--<img src="https://images.google.com/images/branding/googleg/1x/googleg_standard_color_128dp.png" class="md-card-image" alt="image caption">-->
