--- a/root/app/templates/skills.old.html
+++ b/root/app/templates/skills.old.html
@@ -13,15 +13,17 @@
                         background-color: rgba(0, 0, 0, 0.1);
                             border-left-color: #3ee6bf;
                              border-left-style: solid;
-                             padding: 10px;
+                             padding: 5px;
 
-
+    padding-top: 15px;
+    padding-left: 15px;
+    padding-bottom: 0px;
                              ">
 
                              <md-card-header>
     <img md-card-avatar src={{list.icon}}>
     <md-card-title style="    height: 28px;word-wrap: break-word;"> <b>{{list.name}}</b></md-card-title>
-    <!--<md-card-subtitle style="">{{list.tag}}</md-card-subtitle>-->
+    <md-card-subtitle style="">{{list.tag}}</md-card-subtitle>
   </md-card-header>
 
                             <!--<img src="https://images.google.com/images/branding/googleg/1x/googleg_standard_color_128dp.png" class="md-card-image" alt="image caption">-->
