--- a/root/app/templates/skills.html
+++ b/root/app/templates/skills.html
@@ -1,56 +1,12 @@
-<md-tab-group style="overflow:hidden">
-    <md-tab label="All" style="height:100%">
-
-        <div class="container fluid" style="height:100vh">
-            <div class="row fluid">
-
-
-                
-                <div *ngFor="let list of skills">
-                    <div class="col-md-4 col-xs-6" style="padding:2px">
-                        <div class="container fluid">
-                            <md-card style="margin:2px;
-                        background-color: rgba(0, 0, 0, 0.1);
-                            border-left-color: #3ee6bf;
-                             border-left-style: solid;
-                             padding: 10px;
-
-
-                             ">
-
-                             <md-card-header>
-    <img md-card-avatar src={{list.icon}}>
-    <md-card-title style="    height: 28px;word-wrap: break-word;"> <b>{{list.name}}</b></md-card-title>
-    <!--<md-card-subtitle style="">{{list.tag}}</md-card-subtitle>-->
-  </md-card-header>
-
-                            <!--<img src="https://images.google.com/images/branding/googleg/1x/googleg_standard_color_128dp.png" class="md-card-image" alt="image caption">-->
-                          
-<!--                           
-                             <b>                            
-                                 {{list.name}}</b>-->
-                                 </md-card>
-                        </div>
-                    </div>
-                </div>
-
-
-
-
-            </div>
-        </div>
-
-
-
-
-
-
-
-    </md-tab>
-    <md-tab label="Tab 2">Languages
-        <md-card>Simple card</md-card>
-        <md-card>Simple card</md-card>
-        <md-card>Simple card</md-card>
-    </md-tab>
-
-</md-tab-group>
+  <div class="container">
+      <div class="scroller scroller-left">AAAAAA</div>
+      <div class="scroller scroller-right">BBBBBBB</div>
+      <div class="wrapper">
+        <ul class="nav nav-tabs list" id="myTab">
+          <li (click)="aaa(tab)" *ngFor="let tab of tabs" class="{{tab.active ? 'active bb' : ''}}" [style]="getStyle(tab)">
+            <a >{{tab.name}}</a>
+            <!--<button type="button" class="btn btn-danger btn-xs" (click)="test(query)"><span class="glyphicon glyphicon-remove"></span></button>-->
+          </li>
+      </ul>
+      </div>
+    </div>
