--- a/root/app/templates/skills.old.html
+++ b/root/app/templates/skills.old.html
@@ -1,58 +1,26 @@
-<md-tab-group style="overflow:hidden">
-    <md-tab label="All" style="height:100%">
-
+<md-tab-group >
+    <!--===============TAB================-->
+    <md-tab label="All"  >
         <div class="container fluid" style="height:100vh">
             <div class="row fluid">
-
-
-                
+                <!--===============CARD================-->
                 <div *ngFor="let list of skills">
                     <div class="col-md-4 col-xs-6" style="padding:2px">
                         <div class="container fluid">
-                            <md-card style="margin:2px;
-                        background-color: rgba(0, 0, 0, 0.1);
-                            border-left-color: #3ee6bf;
-                             border-left-style: solid;
-                             padding: 5px;
-
-    padding-top: 15px;
-    padding-left: 15px;
-    padding-bottom: 0px;
-                             ">
-
-                             <md-card-header>
-    <img md-card-avatar src={{list.icon}}>
-    <md-card-title style="    height: 28px;word-wrap: break-word;"> <b>{{list.name}}</b></md-card-title>
-    <md-card-subtitle style="">{{list.tag}}</md-card-subtitle>
-  </md-card-header>
-
-                            <!--<img src="https://images.google.com/images/branding/googleg/1x/googleg_standard_color_128dp.png" class="md-card-image" alt="image caption">-->
-                          
-<!--                           
-                             <b>                            
-                                 {{list.name}}</b>-->
-                                 </md-card>
+                            <md-card style="margin:2px;background-color: rgba(0, 0, 0, 0.1);border-left-color: #3ee6bf;border-left-style: solid;                             padding: 10px;">
+                                <md-card-header>
+                                    <img md-card-avatar src={{list.icon}}>
+                                    <md-card-title style="    height: 28px;word-wrap: break-word;"> <b>{{list.name}}</b></md-card-title>
+                                </md-card-header>
+                            </md-card>
                         </div>
                     </div>
                 </div>
-
-
-
-
             </div>
         </div>
-
-
-
-
-
-
-
     </md-tab>
-    <md-tab label="Tab 2">Languages
-        <md-card>Simple card</md-card>
-        <md-card>Simple card</md-card>
-        <md-card>Simple card</md-card>
-    </md-tab>
+    
+
+    
 
 </md-tab-group>
