--- a/root/index.ejs
+++ b/root/index.ejs
@@ -34,7 +34,7 @@
 
   <script src="js/lib/jquery.multilevelpushmenu.min.js"></script>
 
-
+<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" type="text/css" rel="stylesheet">
 
 
 
