--- a/root/app/templates/home.html
+++ b/root/app/templates/home.html
@@ -11,9 +11,46 @@
  </ul>
 <br/>
 <br/>
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel" >
+
+            <ol class="carousel-indicators" style="bottom:-20px;">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+
+
+            <div class="carousel-inner">
+                <div class="item active">
+
+
+                    <div class="carousel-content">
+                        <div>
+                            <p style="color:#000"><b>	Known for Cross-Technological skills and good Automation skills </b>– able to automate the Application’s Workflow from Sub Level to Core Level by seamless integration of suitable technologies. </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="carousel-content">
+                        <div>
+                            <p style="color:#000"><b>	Skillful in advanced development methodologies</b>, tools and processes contributing to the design and rollout of cutting-edge software applications. <br/>.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!--carousel end-->
+                <div class="item">
+                    <div class="carousel-content">
+                        <div>
+                            <p style="color:#000"><b>	Adroit in providing effective resolution to Client queries</b> related to application products or business operations and improving relationships with the client by anticipating future requirements, thereby ensuring a constructive client experience. </p>
+                        </div>
+                    </div>
+                </div>
+              </div>
+              </div>
+
+
 <i class="fa fa-envelope" aria-hidden="true" style="padding:10px;color:#03A9F4;"><a style="    padding: 20px;" href="mailto:sivarajng@gmail.com">sivarajng@gmail.com</a></i>
 </span>
-
-
-
-
