--- a/root/app/templates/experience.html
+++ b/root/app/templates/experience.html
@@ -1,10 +1,57 @@
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<h1>ECXPERIAN</h1>
+<h4>Experience</h4>
+<div *ngFor="let item of experiences">
+
+  <md-card class="example-card" style="background-color: rgba(0, 0, 0, 0.1);padding-bottom:10px">
+    <md-card-header style="    background-color: #0e959a;
+    margin-left: -25px;
+    padding: 10px;
+    margin-right: -25px;
+    margin-top: -25px;">
+      <md-card-title>
+        <span style="color:white;font-weight: 200;font-size: 14px"><b>{{item.designation}}</b></span>
+      </md-card-title>
+    </md-card-header>
+    <md-card-header style="    background-color: rgba(62, 230, 191, 1);
+    margin-left: -25px;
+    padding: 10px;
+    margin-right: -25px;
+    margin-top: -15px;">
+      <md-card-title style="margin: 0px;">
+        <span style="font-weight: 200;font-size: 14px;"><b>
+      {{item.company}} {{item.company}} 
+     
+      <br/>
+     
+     <span style="font-size:14px"> </span> <span style="font-size:16px">{{item.from}} {{item.to}}</span>
+        </b>
+        </span>
+
+      </md-card-title>
+    </md-card-header>
+    <md-card-header style="    background-color: rgba(0, 0, 0, 0);
+    margin-left: -25px;
+    padding: 10px;
+    margin-right: -25px;
+    margin-top: -20px;
+    margin-bottom: -10px;"   >
+      <md-card-title style="margin: 0px;">
+        <span style="font-weight: 200">
+        
+      <br/>
+     
+      <span style="font-size:14px"> {{item.summary}} </span> 
+        
+      <br/>
+     
+      <span style="font-size:14px"> {{item.achievement}} </span> 
+      
+        </span>
+
+      </md-card-title>
+    </md-card-header>
+
+
+
+  </md-card>
+  <br/>
+</div>
