--- a/root/app/templates/projects.html
+++ b/root/app/templates/projects.html
@@ -1,10 +1,53 @@
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<h1>PROJECTS</h1>
+<h4>Academic Profile</h4>
+<div *ngFor="let item of projects">
+
+  <md-card class="example-card" style="background-color: rgba(0, 0, 0, 0.1);padding-bottom:10px">
+    <md-card-header style="    background-color: #0e959a;
+    margin-left: -25px;
+    padding: 10px;
+    margin-right: -25px;
+    margin-top: -25px;">
+      <md-card-title>
+        <span style="color:white;font-weight: 200;font-size: 14px"><b>{{item.course}}</b></span>
+      </md-card-title>
+    </md-card-header>
+    <md-card-header style="    background-color: rgba(62, 230, 191, 1);
+    margin-left: -25px;
+    padding: 10px;
+    margin-right: -25px;
+    margin-top: -15px;">
+      <md-card-title style="margin: 0px;">
+        <span style="font-weight: 200;font-size: 14px;"><b>
+      {{item.institute}}
+     
+      <br/>
+     
+     <span style="font-size:14px"> Year of Pass :</span> <span style="font-size:16px">{{item.year}}</span>
+        </b>
+        </span>
+
+      </md-card-title>
+    </md-card-header>
+    <md-card-header style="    background-color: rgba(0, 0, 0, 0);
+    margin-left: -25px;
+    padding: 10px;
+    margin-right: -25px;
+    margin-top: -20px;
+    margin-bottom: -10px;"   >
+      <md-card-title style="margin: 0px;">
+        <span style="font-weight: 200"><b>
+        
+      <br/>
+     
+      <span style="font-size:14px"> Score :</span> <span style="font-size:22px;color:#0277bd">{{item.score}}</span>
+        </b>
+        </span>
+
+      </md-card-title>
+    </md-card-header>
+
+
+
+  </md-card>
+  <br/>
+</div>
