--- a/root/app/templates/experience.html
+++ b/root/app/templates/experience.html
@@ -1,4 +1,4 @@
-<h4>Experience</h4>
+<h4>Work Experience</h4>
 <div *ngFor="let item of experiences">
 
   <md-card class="example-card" style="background-color: rgba(0, 0, 0, 0.1);padding-bottom:10px">
@@ -8,7 +8,7 @@
     margin-right: -25px;
     margin-top: -25px;">
       <md-card-title>
-        <span style="color:white;font-weight: 200;font-size: 14px"><b>{{item.designation}}</b></span>
+        <span style="color:white;font-weight: 200;font-size: 16px"><b>{{item.company}}</b>, {{item.location}}</span>
       </md-card-title>
     </md-card-header>
     <md-card-header style="    background-color: rgba(62, 230, 191, 1);
@@ -17,14 +17,12 @@
     margin-right: -25px;
     margin-top: -15px;">
       <md-card-title style="margin: 0px;">
-        <span style="font-weight: 200;font-size: 14px;"><b>
-      {{item.company}} {{item.company}} 
-     
-      <br/>
-     
-     <span style="font-size:14px"> </span> <span style="font-size:16px">{{item.from}} {{item.to}}</span>
-        </b>
-        </span>
+        <span style="font-weight: 200;font-size: 14px;float:left">
+          <b>     {{item.designation}}       <br/>     </b> </span>
+        <span style="font-weight: 200;font-size: 14px;float:right;color:#0D47A1">
+              : <b>{{item.from}}</b> to <b>{{item.to}}</b>
+               </span>
+
 
       </md-card-title>
     </md-card-header>
@@ -38,7 +36,10 @@
         <span style="font-weight: 200">
         
       <br/>
-     summary
+      <span style="font-weight: 200;font-size: 14px;float:left;color:#0D47A1">
+             <b>  Summary</b>
+               </span>
+               <br/>  
       <span style="font-size:14px"> 
                 <ul>
           <li *ngFor="let list1 of item.summary">
@@ -50,7 +51,10 @@
         </span>
 
 
-        <br/> achievement
+         <span style="font-weight: 200;font-size: 14px;float:left;color:#0D47A1">
+             <b>  Achievement Highlights</b>
+               </span>
+               <br/>  
         <span style="font-size:14px"> 
         <ul>
           <li *ngFor="let list2 of item.achievement">
