--- a/root/app/templates/home.html
+++ b/root/app/templates/home.html
@@ -9,9 +9,13 @@
         <li>Had hands on experience with Cloud Platforms like <b style="color:#03a9f4">Azure</b>, <b style="color:#03a9f4">Firebase</b>, <b style="color:#03a9f4">AWS</b> along with DevOps(CI/CD) models.</li>
         <li>And improving on my <b style="color:#03a9f4">Javascript (ES6)</b>,<b style="color:#03a9f4"> Java</b> and <b style="color:#03a9f4">Python</b> skills every day.I know my way around <b style="color:#03a9f4">Machine Learning</b> and I've recently started experimenting with scikit  using Python.</li>
  </ul>
-<br/>
-<br/>
+ <hr>
 
+<i class="fa fa-envelope" aria-hidden="true" style="padding:10px;color:#03A9F4;"><a style="    padding: 20px;font-size: 18px;" href="mailto:sivarajng@gmail.com"><b>sivarajng@gmail.com</b></a></i>
+
+<i class="fa fa-download" aria-hidden="true" style="padding:10px;color:#03A9F4;float:right;"><a style="    padding: 20px;font-size: 18px;" href="/docs/Sivaraj_Nagaraj_Resume_IT_MEAN Stack.docx"><b>download Resume</b></a></i>
+<br/>
+<br/>
 <div id="myCarousel" class="carousel slide" data-ride="carousel" >
 
             <ol class="carousel-indicators" style="bottom:-20px;">
@@ -27,7 +31,7 @@
 
                     <div class="carousel-content">
                         <div>
-                            <p style="color:#000"><b>	Known for Cross-Technological skills and good Automation skills </b>– able to automate the Application’s Workflow from Sub Level to Core Level by seamless integration of suitable technologies. </p>
+                            <p style="color:#000;text-align:center;"><b>	Known for Cross-Technological skills and good Automation skills </b>– able to automate the Application’s Workflow from Sub Level to Core Level by seamless integration of suitable technologies. </p>
                         </div>
                     </div>
                 </div>
@@ -35,7 +39,7 @@
                 <div class="item">
                     <div class="carousel-content">
                         <div>
-                            <p style="color:#000"><b>	Skillful in advanced development methodologies</b>, tools and processes contributing to the design and rollout of cutting-edge software applications. <br/>.</p>
+                            <p style="color:#000;text-align:center;"><b>	Skillful in advanced development methodologies</b>, tools and processes contributing to the design and rollout of cutting-edge software applications. <br/>.</p>
                         </div>
                     </div>
                 </div>
@@ -44,13 +48,11 @@
                 <div class="item">
                     <div class="carousel-content">
                         <div>
-                            <p style="color:#000"><b>	Adroit in providing effective resolution to Client queries</b> related to application products or business operations and improving relationships with the client by anticipating future requirements, thereby ensuring a constructive client experience. </p>
+                            <p style="color:#000;text-align:center;"><b>	Adroit in providing effective resolution to Client queries</b> related to application products or business operations and improving relationships with the client by anticipating future requirements, thereby ensuring a constructive client experience. </p>
                         </div>
                     </div>
                 </div>
               </div>
               </div>
 
-
-<i class="fa fa-envelope" aria-hidden="true" style="padding:10px;color:#03A9F4;"><a style="    padding: 20px;" href="mailto:sivarajng@gmail.com">sivarajng@gmail.com</a></i>
 </span>
