--- a/root/app/templates/home.html
+++ b/root/app/templates/home.html
@@ -1,5 +1,5 @@
-<h3 style="padding-bottom:0px;">About me
-</h3>
+<h4>About Me</h4>
+
 <span style="font-size:16px">
  <ul>
         <li>Hey what's up? Full name's Sivaraj but everyone calls me Siva.</li>
