--- a/root/app/templates/skills.html
+++ b/root/app/templates/skills.html
@@ -1,3 +1,5 @@
+<h4>Technical Skills</h4>
+
   <div class="container fluid">
       <div class="scroller scroller-left"><i class="icon-chevron-left icon-2x" style="color:#2196F3"></i></div>
       <div class="scroller scroller-right"><i class="icon-chevron-right icon-2x" style="color:#2196F3"></i></div>
