--- a/root/app/templates/home.html
+++ b/root/app/templates/home.html
@@ -11,9 +11,11 @@
  </ul>
  <hr>
 
-<i class="fa fa-envelope" aria-hidden="true" style="padding:10px;color:#03A9F4;"><a style="    padding: 20px;font-size: 18px;" href="mailto:sivarajng@gmail.com"><b>sivarajng@gmail.com</b></a></i>
+<i class="fa fa-envelope" aria-hidden="true" style="padding:10px;color:#03A9F4;"><a style="    padding: 20px;font-size: 16px;" href="mailto:sivarajng@gmail.com"><b>sivarajng@gmail.com</b></a></i>
 
-<i class="fa fa-download" aria-hidden="true" style="padding:10px;color:#03A9F4;float:right;"><a style="    padding: 20px;font-size: 18px;" href="/docs/Sivaraj_Nagaraj_Resume_IT_MEAN Stack.docx"><b>download Resume</b></a></i>
+<i class="fa fa-share" aria-hidden="true" style="padding:10px;color:#03A9F4;"><a style="    padding: 20px;font-size: 16px;" href="mailto:?subject=Sivaraj&body=content"><b>Share</b></a></i>
+
+<i class="fa fa-download" aria-hidden="true" style="padding:10px;color:#03A9F4;"><a style="    padding: 20px;font-size: 16px;" href="/docs/Sivaraj_Nagaraj_Resume_IT_MEAN Stack.docx"><b>download Resume</b></a></i>
 <br/>
 <br/>
 <div id="myCarousel" class="carousel slide" data-ride="carousel" >
