--- a/root/app/templates/app.html
+++ b/root/app/templates/app.html
@@ -5,18 +5,29 @@
 
                 <div class="example-container">
                         <div class="button-row">
-                                <button (click)="toggleChip()" md-mini-fab><md-icon>share</md-icon></button>
+                                <button (click)="toggleChip()" md-fab><md-icon>share</md-icon></button>
                         </div>
 
                 </div>
 
+
+
+
+
+
+
+                 
+
                 <div *ngIf="showToggle" class="example-container-chip">
                         <div class="button-row">
-                                <div *ngFor="let list of social">
-                                        <a md-raised-button href={{list.url}} target="_blank" style="background-color: #ff00ff;
-                                        padding:2px;    margin: 2px;
-    border-radius: 50px;" > {{list.name}}</a>
-                                </div>
+                                <!--<div *ngFor="let list of social">
+                                        <a md-raised-button href={{list.url}} target="_blank" style="background-color: #ff00ff;padding:2px;margin: 2px;    border-radius: 50px;" > {{list.name}}</a>
+                                </div>-->
+                                <div><a md-raised-button href="mailto:?Subject=Cool%20profile%20of%20Sivaraj%20Nagaraj%2C%20check%20it%20out.&Body=Hey%2C%0A%0AI%20came%20across%20a%20cool%20profile%20of%20Sivaraj%20Nagaraj%2C%20check%20it%20out.%0Ahttp%3A//sivaraj-nagaraj.herokuapp.com" target="_blank" style="background-color: #00bf8f;padding:2px;margin: 2px;    border-radius: 50px;color:white;" > <b>{{social[0].name}}</b></a></div>
+                                <div><a md-raised-button href={{social[1].url}} target="_blank" style="background-color: #3b5998;padding:2px;margin: 2px;    border-radius: 50px;color:white;" > <b> {{social[1].name}}</b></a></div>
+                                <div><a md-raised-button href={{social[2].url}} target="_blank" style="background-color: #dd4b39;padding:2px;margin: 2px;    border-radius: 50px;color:white;" > <b>{{social[2].name}}</b></a></div>
+                                <div><a md-raised-button href={{social[3].url}} target="_blank" style="background-color: #007bb5;padding:2px;margin: 2px;    border-radius: 50px;color:white;" > <b>    {{social[3].name}}</b></a></div>
+                                <div><a md-raised-button href={{social[4].url}} target="_blank" style="background-color: #55acee;padding:2px;margin: 2px;    border-radius: 50px;color:white;" > <b>    {{social[4].name}}</b></a></div>
                                   
 
 
