--- a/root/app/templates/experience.html
+++ b/root/app/templates/experience.html
@@ -44,7 +44,7 @@
       <span style="font-size:14px"> 
                 <ul>
           <li *ngFor="let list1 of item.summary">
-                       <div [innerHTML]="list1">
+                       <div [innerHTML]="list1"  style="color: black;">
 </div>
             </li>
         </ul>
@@ -59,7 +59,7 @@
         <span style="font-size:14px"> 
         <ul>
           <li *ngFor="let list2 of item.achievement">
-            <div [innerHTML]="list2">
+            <div [innerHTML]="list2"  style="color: black;">
 </div>
 
           </li>
