--- a/root/app/templates/projects.html
+++ b/root/app/templates/projects.html
@@ -51,7 +51,7 @@
       <span style="font-size:14px"> 
                 <ul>
           <li *ngFor="let list1 of item.summary">
-                       <div [innerHTML]="list1">
+                       <div [innerHTML]="list1"  style="color: black;">
 </div>
             </li>
         </ul>
@@ -65,7 +65,7 @@
                <br/>  
         <span style="font-size:14px"> 
         <ul>
-          <li *ngFor="let list2 of item.roles">
+          <li *ngFor="let list2 of item.roles"  style="color: black;">
             <div [innerHTML]="list2">
 </div>
 
