--- a/root/app/templates/portrait.html
+++ b/root/app/templates/portrait.html
@@ -9,7 +9,7 @@
             </h1>
             <h1 class="block__title" style="text-shadow: 2px 2px 4px #000000;">
 
-                <span style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a <em>Sofware Engineer</em> fluent in <br/><em>MEAN Stack</em>, <em>Cloud</em>, <em>DevOps</em>, <em>Hybrid Mobile Apps</em>, and also a beginner in <em> Machine Learning</em>, working in <em>Bengaluru, India</em> </span>
+                <span style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">a <em>Sofware Engineer</em> fluent in <br/><em>MEAN Stack</em>, <em>React</em>, <em>Cloud</em>, <em>DevOps</em>, <em>Hybrid Mobile Apps</em>, and also a beginner in <em> Machine Learning</em>, working in <em>Bengaluru, India</em> </span>
             </h1>
             <div class="block__cta " style="overflow: visible;margin: -10px;">
                 <a href="mailto:sivarajng@gmail.com?&body=Hi%20Sivaraj," style="transform: matrix(1, 0, 0, 1, 0, 0); visibility: inherit; opacity: 1;text-shadow: 2px 2px 4px #000000;font-size: small;">
